DE-2377 - Backported to Java 8
Modified build to use locally built aiven-common jar. Also modified the following things to be backported to java 8:

* List.of replaced with Arrays.asList
* Map.of replaced with new HashMap<String, String>() {{ put(key, value); }} pattern
* var into String and corresponding types
* one case of replaceAll with lambda functions, replaced with string directly

Still missing 4 tests be fixed to be sure everything is working ok